better description of template

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,4 @@
 name=my-project
-description=my-project short description
+description=scala$ide&sbt project description
 version=my-project-version
 organization=my-organization
