--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,4 @@
+description=Template for a scala+eclipse+sbt project
 name=my-project
-description=scala$ide&sbt project description
 version=my-project-version
 organization=my-organization
