--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,4 @@
 description=Template for a scala+eclipse+sbt project
 name=my-project
 version=0.0.1
-organization=com.myorganizationdomain
+organization=com.yourdomain.lib (groupId)
