--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,4 @@
 description=New Scala project (with eclipse scala-ide & sbt)
 name=awesome-new-project
-version=0.0.1
+version=0.0.1-SNAPSHOT
 groupId=com.yourdomain.lib
