--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,4 @@
-description=New Scala project (with eclipse scala-ide & sbt)
+description=New Scala project (with sbteclipse)
 name=awesome-new-project
-version=0.0.1-SNAPSHOT
-groupId=com.yourdomain.lib
+version=0.1.0-SNAPSHOT
+groupId=com.example
